attempt to solve img display bug

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -386,22 +386,22 @@ label{
  }
 
 .twitter{
-  background-image: url("twitter.png");
+  background-image: image-url("twitter.png");
 }
 .twitter:hover{
-  background-image: url("twitter-white.png");
+  background-image: image-url("twitter-white.png");
 }
 .github{
-  background-image: url("github.png");
+  background-image: image-url("github.png");
 }
 .github:hover{
-  background-image: url("github-white.png");
+  background-image: image-url("github-white.png");
 }
 .linkedin{
-  background-image: url("linkedin.png");
+  background-image: image-url("linkedin.png");
 }
 .linkedin:hover{
-  background-image: url("linkedin-white.png");
+  background-image: image-url("linkedin-white.png");
 }
 
 .shadow{
