--- a/app/views/articles/_text_box.html.erb
+++ b/app/views/articles/_text_box.html.erb
@@ -4,7 +4,7 @@
         <h6 class="title categ-name">
           <%= @category.name %>
         </h6>
-        <a href="<%= 'articles/show/' + article.id.to_s %>" class="category-link">
+        <a href="#" class="category-link">
             <h6 class="title article-title">
               <%= article.title %>
             </h6>
