--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,23 +1,10 @@
-/*
- * This is a manifest file that'll be compiled into application.css, which will include all the files
- * listed below.
- *
- * Any CSS and SCSS file within this directory, lib/assets/stylesheets, or any plugin's
- * vendor/assets/stylesheets directory can be referenced here using a relative path.
- *
- * You're free to add application-wide styles to this file and they'll appear at the bottom of the
- * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
- * files in this directory. Styles in this file should be added after the last require_* statement.
- * It is generally better to create a new file per style scope.
- *
- *= require_tree .
- *= require_self
- */
-***** TAGs ***** * {
+
+/***** TAGs *****/
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Roboto", sans-serif;
+  font-family: 'Roboto', sans-serif;
 }
 
 body {
@@ -84,7 +71,9 @@ label {
   color: #fe6001;
 }
 
-select, input, textarea {
+select,
+input,
+textarea {
   width: 100%;
 }
 
@@ -96,7 +85,9 @@ textarea:focus {
   min-height: 150px;
 }
 
-***** CLASSES ***** .center {
+/***** CLASSES *****/
+
+.center {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -120,7 +111,7 @@ textarea:focus {
 }
 
 .roboto-bold {
-  font-family: "Roboto Condensed", sans-serif;
+  font-family: 'Roboto Condensed', sans-serif;
   font-weight: 700;
 }
 
@@ -225,7 +216,8 @@ textarea:focus {
   padding: 50px;
 }
 
-.field, .button {
+.field,
+.button {
   margin-top: 15px;
 }
 
@@ -236,7 +228,7 @@ textarea:focus {
 }
 
 .logo {
-  font-family: "Roboto Condensed", sans-serif;
+  font-family: 'Roboto Condensed', sans-serif;
   font-weight: 700;
   text-transform: none;
   font-size: 1.5rem;
@@ -436,4 +428,75 @@ footer .logo:hover {
 
 .shadow {
   box-shadow: inset 0 -60px 40px -10px rgba(0, 0, 0, 0.8), inset 0 110px 40px -10px rgba(0, 0, 0, 0.5);
+}
+
+.pagination {
+  background: white;
+  cursor: default;
+  /* self-clearing method: */
+}
+
+.pagination a,
+.pagination span,
+.pagination em {
+  padding: 0.2em 0.5em;
+  display: block;
+  float: left;
+  margin-right: 1px;
+}
+
+.pagination .disabled {
+  color: #4c443f;
+  border: 1px solid #ddd;
+}
+
+.pagination .current {
+  font-style: normal;
+  font-weight: bold;
+  background: #fe6001;
+  color: white;
+  border: 1px solid #fe6001;
+}
+
+.pagination a {
+  text-decoration: none;
+  color: #fe6001;
+  border: 1px solid #fe6001;
+}
+
+.pagination a:hover,
+.pagination a:focus {
+  color: #f99c00;
+  border-color: #f99c00;
+}
+
+.pagination .page_info {
+  background: #fe6001;
+  color: white;
+  padding: 0.4em 0.6em;
+  width: 22em;
+  margin-bottom: 0.3em;
+  text-align: center;
+}
+
+.pagination .page_info b {
+  color: #4c443f;
+  background: #fe6001;
+  padding: 0.1em 0.25em;
+}
+
+.pagination:after {
+  content: ".";
+  display: block;
+  height: 0;
+  clear: both;
+  visibility: hidden;
+}
+
+* html .pagination {
+  height: 1%;
+}
+
+*:first-child+html .pagination {
+  overflow: hidden;
 }
